<resources>
    <string name="app_name">ShelterConnect</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>
    <string name="postal_address">Postal Address</string>
    <string name="organizer">Organizer?</string>
    <string name="verify_password">Verify Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign-In</string>
    <string name="password">Password</string>
    <string name="donor">Donor</string>
    <string name="employee">Employee</string>
    <string name="email">Email</string>
    <string name="position">Position</string>
    <string name="delete">Delete</string>
    <string name="special_button">Special Button</string>
</resources>
