<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.shelterconnect.controller.items.ReadItemActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/requestToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ToolBarStyle"
        app:popupTheme="@style/AppTheme.PopupOverlay" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/textViewNameLabel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <TextView
            android:id="@+id/textViewPositionLabel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/position"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <TextView
            android:id="@+id/textViewEmailLabel"
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    </LinearLayout>


    <ListView
        android:id="@+id/workerList"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </ListView>



</LinearLayout>
