<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/signup_name"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signInEmail"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/fui_email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_name" />

    <EditText
        android:id="@+id/signup_phone"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/fui_phone_hint"
        android:inputType="phone"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInEmail" />

    <EditText
        android:id="@+id/signup_address"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/postal_address"
        android:inputType="textPostalAddress"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_phone" />

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/fui_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/signup_vpassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_address" />

    <EditText
        android:id="@+id/signup_vpassword"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signInPassword"
        app:layout_constraintTop_toBottomOf="@+id/signup_address" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        app:layout_constraintEnd_toStartOf="@+id/toLogin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInPassword" />

    <Button
        android:id="@+id/toLogin_button"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginEnd="62dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_vpassword" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="136dp"
        android:layout_height="110dp"
        android:layout_marginEnd="138dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toLogin_button">

        <RadioButton
            android:id="@+id/radioDonor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/donor" />

        <RadioButton
            android:id="@+id/radioOrganizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Organizer" />

        <RadioButton
            android:id="@+id/radioEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/employee" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBarSignUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="182dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="6dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</android.support.constraint.ConstraintLayout>